@@ -1,3 +1,9 @@
+2007-11-30  Emilio Meschi  <emilio.meschi@cern.ch>
+
+	* tag V00-07-08
+	* bugfix: modify FUResource to produce warning when fedid is 
+	not in range, generate error message indicating duplicated fedids
+
 2007-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-07-07
